Fixing spacing

--- a/ArticleTemplates/css/scss/templates/_liveblog.scss
+++ b/ArticleTemplates/css/scss/templates/_liveblog.scss
@@ -91,6 +91,10 @@
 					height: 150px;
 				}
 				
+				p:last-child {
+					margin-bottom: 0;
+				}
+				
 				&.expanded {
 					height: auto;
 				}
