--- a/ArticleTemplates/css/style.css
+++ b/ArticleTemplates/css/style.css
@@ -6190,6 +6190,8 @@ aside {
   @media all and (max-width: 28.115em) {
     #liveblog .article__body--liveblog__pinned .summary .block-elements {
       height: 150px; } }
+  #liveblog .article__body--liveblog__pinned .summary .block-elements p:last-child {
+    margin-bottom: 0; }
   #liveblog .article__body--liveblog__pinned .summary .block-elements.expanded {
     height: auto; }
   #liveblog .article__body--liveblog__pinned .summary .block-elements .live-summary-more {
